--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -2,7 +2,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
     name: admin-policy-0
@@ -10,7 +10,11 @@ metadata:
 spec:
     egress:
         - action: Pass
-          ports: null
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
           to:
             - pods:
                 namespaceSelector: {}
@@ -33,7 +37,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
     name: admin-policy-1
@@ -48,7 +52,11 @@ spec:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-          ports: null
+          ports:
+            - portRange:
+                end: 65535
+                protocol: TCP
+                start: 1
     priority: 2
     subject:
         pods:
@@ -64,7 +72,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
         nsx-id: "10219"
     creationTimestamp: null
     name: admin-policy-2
@@ -72,7 +80,11 @@ metadata:
 spec:
     egress:
         - action: Pass
-          ports: null
+          ports:
+            - portRange:
+                end: 320
+                protocol: UDP
+                start: 300
           to:
             - pods:
                 namespaceSelector: {}
@@ -95,7 +107,7 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
-        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: All Connections)'
+        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
         nsx-id: "10219"
     creationTimestamp: null
     name: admin-policy-3
@@ -110,7 +122,11 @@ spec:
                     matchExpressions:
                         - key: group__Hufflepuff
                           operator: Exists
-          ports: null
+          ports:
+            - portRange:
+                end: 320
+                protocol: UDP
+                start: 300
     priority: 4
     subject:
         pods:
