adding dns servers

--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: dns-rule-id
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (*) dst: (tag = Slytherin) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -25,7 +48,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     egress:
@@ -45,7 +68,7 @@ metadata:
         description: 'src: (*) dst: (tag = Slytherin) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     ingress:
@@ -65,7 +88,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -85,7 +108,7 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -105,7 +128,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     egress:
@@ -125,7 +148,7 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: default
 spec:
     ingress:
@@ -145,7 +168,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: default
 spec:
     ingress:
@@ -165,7 +188,7 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-8
+    name: policy-9
     namespace: default
 spec:
     egress:
@@ -185,7 +208,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-9
+    name: policy-10
     namespace: default
 spec:
     egress:
@@ -205,7 +228,7 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-10
+    name: policy-11
     namespace: default
 spec:
     ingress:
@@ -225,7 +248,7 @@ metadata:
         description: 'src: (*) dst: (tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-11
+    name: policy-12
     namespace: default
 spec:
     ingress:
