--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdmin_AdminPoliciesEnabled/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: dns-rule-id
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (*) dst: (group = Web) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -25,7 +48,7 @@ metadata:
         description: 'src: (*) dst: (group = Web) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     ingress:
@@ -45,7 +68,7 @@ metadata:
         description: 'src: (group = Web) dst: (group = App) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     egress:
@@ -68,7 +91,7 @@ metadata:
         description: 'src: (group = Web) dst: (group = App) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -91,7 +114,7 @@ metadata:
         description: 'src: (group = App) dst: (group = DB) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -114,7 +137,7 @@ metadata:
         description: 'src: (group = App) dst: (group = DB) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
