--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: dns-rule-id
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -27,7 +50,7 @@ metadata:
         description: 'src: (*) dst: (tag = Slytherin and tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     ingress:
@@ -49,7 +72,7 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     egress:
@@ -71,7 +94,7 @@ metadata:
         description: 'src: (*) dst: (tag = Gryffindor and tag != DB) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -93,7 +116,7 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -115,7 +138,7 @@ metadata:
         description: 'src: (*) dst: (tag = Hufflepuff and tag != DB) conn: All Connections'
         nsx-id: "1927"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
