--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprSingleScope/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: dns-rule-id
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -28,7 +51,7 @@ metadata:
         description: 'src: (tag = Dumbledore) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1926"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     ingress:
@@ -51,7 +74,7 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     egress:
@@ -74,7 +97,7 @@ metadata:
         description: 'src: (tag = Gryffindor) dst: (tag != Hufflepuff) conn: All Connections'
         nsx-id: "1928"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     ingress:
@@ -97,7 +120,7 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     egress:
@@ -120,7 +143,7 @@ metadata:
         description: 'src: (tag = Hufflepuff) dst: (tag != Slytherin) conn: All Connections'
         nsx-id: "1930"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
@@ -143,7 +166,7 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: default
 spec:
     egress:
@@ -166,7 +189,7 @@ metadata:
         description: 'src: (tag = Slytherin) dst: (tag != Gryffindor) conn: All Connections'
         nsx-id: "1932"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: default
 spec:
     ingress:
