--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwarts/policies.yaml
@@ -2,10 +2,33 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: dns-rule-id
+    creationTimestamp: null
+    name: dns-policy
+    namespace: default
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-0
+    name: policy-1
     namespace: default
 spec:
     egress:
@@ -30,7 +53,7 @@ metadata:
         description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-1
+    name: policy-2
     namespace: default
 spec:
     egress:
@@ -55,7 +78,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-2
+    name: policy-3
     namespace: default
 spec:
     egress:
@@ -80,7 +103,7 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-3
+    name: policy-4
     namespace: default
 spec:
     egress:
@@ -105,7 +128,7 @@ metadata:
         description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-4
+    name: policy-5
     namespace: default
 spec:
     ingress:
@@ -130,7 +153,7 @@ metadata:
         description: 'src: (group = Hufflepuff) dst: (group = Web and group = Hufflepuff) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-5
+    name: policy-6
     namespace: default
 spec:
     ingress:
@@ -155,7 +178,7 @@ metadata:
         description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-6
+    name: policy-7
     namespace: default
 spec:
     ingress:
@@ -180,7 +203,7 @@ metadata:
         description: 'src: (group = Dumbledore) dst: (group = Web and group = Gryffindor) conn: All Connections'
         nsx-id: "10400"
     creationTimestamp: null
-    name: policy-7
+    name: policy-8
     namespace: default
 spec:
     ingress:
@@ -205,7 +228,7 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-8
+    name: policy-9
     namespace: default
 spec:
     egress:
@@ -232,7 +255,7 @@ metadata:
         description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-9
+    name: policy-10
     namespace: default
 spec:
     egress:
@@ -259,7 +282,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-10
+    name: policy-11
     namespace: default
 spec:
     egress:
@@ -286,7 +309,7 @@ metadata:
         description: 'src: (group = Web and group = Gryffindor) dst: (group = App and group = Gryffindor) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-11
+    name: policy-12
     namespace: default
 spec:
     ingress:
@@ -313,7 +336,7 @@ metadata:
         description: 'src: (group = Web and group = Hufflepuff) dst: (group = App and group = Hufflepuff) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-12
+    name: policy-13
     namespace: default
 spec:
     ingress:
@@ -340,7 +363,7 @@ metadata:
         description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: All Connections'
         nsx-id: "10401"
     creationTimestamp: null
-    name: policy-13
+    name: policy-14
     namespace: default
 spec:
     ingress:
@@ -367,7 +390,7 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-14
+    name: policy-15
     namespace: default
 spec:
     egress:
@@ -394,7 +417,7 @@ metadata:
         description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-15
+    name: policy-16
     namespace: default
 spec:
     egress:
@@ -421,7 +444,7 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-16
+    name: policy-17
     namespace: default
 spec:
     egress:
@@ -448,7 +471,7 @@ metadata:
         description: 'src: (group = App and group = Gryffindor) dst: (group = DB and group = Gryffindor) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-17
+    name: policy-18
     namespace: default
 spec:
     ingress:
@@ -475,7 +498,7 @@ metadata:
         description: 'src: (group = App and group = Hufflepuff) dst: (group = DB and group = Hufflepuff) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-18
+    name: policy-19
     namespace: default
 spec:
     ingress:
@@ -502,7 +525,7 @@ metadata:
         description: 'src: (group = App and group = Slytherin) dst: (group = DB and group = Slytherin) conn: All Connections'
         nsx-id: "10405"
     creationTimestamp: null
-    name: policy-19
+    name: policy-20
     namespace: default
 spec:
     ingress:
