--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag = Slytherin) conn: All Connections'
+        description: 'src: (tag = Gryffindor) dst: (tag = Slytherin) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
     name: policy-0
@@ -14,7 +14,10 @@ spec:
                 matchExpressions:
                     - key: tag__Slytherin
                       operator: Exists
-    podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
     policyTypes:
         - Egress
 ---
@@ -22,7 +25,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (*) dst: (tag != DB) conn: All Connections'
+        description: 'src: (tag = Gryffindor) dst: (tag != DB) conn: All Connections'
         nsx-id: "1925"
     creationTimestamp: null
     name: policy-1
@@ -34,7 +37,10 @@ spec:
                 matchExpressions:
                     - key: tag__DB
                       operator: DoesNotExist
-    podSelector: {}
+    podSelector:
+        matchExpressions:
+            - key: tag__Gryffindor
+              operator: Exists
     policyTypes:
         - Egress
 ---
