added adminPolicy examples for OrExpr and AndExpr

--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
@@ -149,7 +149,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Default Deny Network Policy
-        nsx-id: "2144"
+        nsx-id: no-nsx-id
     creationTimestamp: null
     name: default-deny
     namespace: default
