--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndConds/policies.yaml
@@ -117,7 +117,7 @@ kind: NetworkPolicy
 metadata:
     annotations:
         description: Default Deny Network Policy
-        nsx-id: "2144"
+        nsx-id: no-nsx-id
     creationTimestamp: null
     name: default-deny
     namespace: default
